# landau-poisson-solver-2D

./: .gitignore  1DDG_Results.txt  1DDG_Results_AfterI1I2.txt  LP_ompi_1.cpp  SetInit_1.cpp  advection_1.cpp  collisionRoutines_1.cpp  configure.ac  jobscript.sh  makefile  makefile_old
source/: EntropyCalculations.cpp  EntropyCalculations.h  LP_ompi.cpp  LP_ompi.h  LP_ompi_1.cpp  Makefile.am  MarginalCreation.cpp  MarginalCreation.h  MomentCalculations.cpp  MomentCalculations.h  NegativityChecks.cpp  NegativityChecks.h  PoissonFunctions.cpp  PoissonFunctions.h  PoissonPrint.cpp  PoissonPrint.h  PoissonVariables.cpp  PoissonVariables.h  SetInit_1.cpp  SetInit_1.h  advection_1.cpp  advection_1.h  collisionRoutines_1.cpp  collisionRoutines_1.h  conservationRoutines.cpp
